--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,7 +16,9 @@
       "@services/*": ["services/*"],
       "@components/*": ["components/*"],
       "@assets/*": ["assets/*"],
-      "@lib/*": ["lib/*"]
+      "@lib/*": ["lib/*"],
+      "@data/*": ["data/*"],
+      "@constants/*": ["constants/*"]
     },
 
     /* Bundler mode */
