--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "szaneron..github.io",
+  "name": "szaneron.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -40,6 +40,7 @@
     "postcss": "^8.5.6",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vite-plugin-svgr": "^4.5.0"
   }
 }
